--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prod": "ng build --prod   --aot && lite-server --baseDir dist/ --base-href  https://alishoghian.github.io/dashboard/"
   },
   "private": true,
   "dependencies": {
